--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,20 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+pre {
+  display: block;
+  padding: 20px;
+  background-color: #f9f9f9;
+}
+
+code {
+  color: #3c3c3c;
+}
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 5px solid #ccc;
+  margin-left: 20px;
+  padding: 3px 20px;
+}
